DO/001-nginx-ingress[http]/echo_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echo-ingress
#  annotations:
#    kubernetes.io/ingress.class: nginx
#    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
#    certmanager.k8s.io/cluster-issuer: letsencrypt-staging
spec:
#  tls:
#    - hosts:
#        - kuber.phaseiilabs.com
#        - kuber2.phaseiilabs.com
#      secretName: letsencrypt-prod
  rules:
    - host: kuber.phaseiilabs.com
      http:
        paths:
          - backend:
              serviceName: piiapp-service
              servicePort: 80
    - host: httptest.phaseiilabs.com
      http:
        paths:
          - backend:
              serviceName: piiapp-service
              servicePort: 80
    - host: kuber2.phaseiilabs.com
      http:
        paths:
          - backend:
              serviceName: echo2
              servicePort: 80
